--- a/book/_config.yml
+++ b/book/_config.yml
@@ -13,6 +13,8 @@ execute:
 
 # Define the name of the latex output file for PDF builds
 latex:
+  latex_engine: lualatex
+  use_jupyterbook_latex: true
   latex_documents:
     targetname: book.tex
 
