--- a/book/_config.yml
+++ b/book/_config.yml
@@ -34,6 +34,10 @@ html:
   use_issues_button: true
   use_repository_button: true
 
+sphinx:
+  config:
+    language: es
+
 # https://github.com/executablebooks/jupyter-book/issues/1918#issuecomment-1440833493
 exclude_patterns: [_build, "**.ipynb_checkpoints", ".venv/*"]
 only_build_toc_files: true
