--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Repaso de Análisis y Modelamiento Numérico
+title: Repaso de Análisis y Modelamiento Numérico I
 author: Carlos Aznarán
 copyright: "2024"
 logo: logo.jpg
