--- a/book/_config.yml
+++ b/book/_config.yml
@@ -10,7 +10,7 @@ logo: logo.jpg
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: force
-  timeout: 20000
+  timeout: 10000
 
 # Define the name of the latex output file for PDF builds
 latex:
@@ -38,6 +38,7 @@ html:
 sphinx:
   config:
     language: es
+    html_extra_path: ['video']
 
 # https://github.com/executablebooks/jupyter-book/issues/1918#issuecomment-1440833493
 exclude_patterns: [_build, "**.ipynb_checkpoints", ".venv/*"]
