--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -22,12 +22,12 @@ parts:
       - file: lu
       - file: special
       - file: norms
-  - caption: Sistemas de ecuaciones no lineales
-    chapters:
-      - file: lu
-  - caption: Interpolación
-    chapters:
-      - file: lu
+  # - caption: Sistemas de ecuaciones no lineales
+  #   chapters:
+  #     - file: lu
+  # - caption: Interpolación
+  #   chapters:
+  #     - file: lu
   - caption: Referencias
     numbered: false
     chapters:
